#779: correct UT